# REANENT

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  target.md  海外仓库邮编地址映射.md
config/: feishu_permissions.example.json
deploy/: env.10.0.10.186.example  nginx.conf
docs/: PMC库存供应链智能体立项书修改稿.md  PMC库存供应链智能体需求清单.md  architecture.md  deploy_10.0.10.186.md  feishu_auth_permissions.md  inventory_monitoring_and_plan_sop.md  inventory_traceability_table_pools.json  inventory_traceability_table_pools.md  llm_working_standard.md  pmc_rule_inventory.md  requirements_extracted.md  root_cause_rule_flow.md  sku_suggestion_flow.md  库存监控分析与计划管理_总结.md
external_integrations/: README.md  feishu.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
inventory-control-tower-clone/: .npmrc  design-qa.md  package-lock.json  package.json
scripts/: generate_pmc_project_pdf.py  generate_resume_pdf.py  get_feishu_user_id.py  import_schema_to_neo4j.py  inspect_feishu_approval.py  sync_feishu_directory.py  sync_v1_schema_comments.py  test_daily_feishu_approval.py  test_sku_issue_business_flow.py
tests/: fake_control_tower.py  test_agentic_loop.py  test_context_manager.py  test_control_tower.py  test_control_tower_recommendations.py  test_control_tower_sku_investigation_export.py  test_daily_review_workflow.py  test_env_and_logging.py  test_feishu_auth.py  test_feishu_directory_sync.py  test_feishu_event_api.py  test_feishu_integration.py  test_first_leg_shipments_api.py  test_goal_loop.py  test_memory_daily_review.py  (+18 more)
(+75 files in other folders)
